# TMP

./: .clang-format  CMakeLists.txt  callable.h  traits.h  type_list.h
tests/: test_callable.cpp  test_traits.cpp  test_type_list.cpp  tests.cpp
